crates/wx-compiler/src/opt/snapshots/wx_compiler__opt__tests__snapshot_sched_call_two_args.snap
---
source: crates/wx-compiler/src/opt/tests.rs
expression: case.schedule_full()
---
locals:
  - I32
  - I32
  - I32
body:
  - LocalGet: 0
  - LocalGet: 1
  - Call: 668
  - LocalTee: 2
br_table_depths: []
